# webhtml5-plug-deployer

./: .gitattributes  .gitignore
.github/workflows/: deploy-hostek-plug.yml  deploy-hostek.yml
app/: Cargo.toml  Trunk.toml  index.html
app/deploy/: web.config
app/src/: main.rs
plugs/artemis-ii-ride-along/: Cargo.toml  index.html  styles.css
plugs/artemis-ii-ride-along/src/: main.rs
plugs/brisket-launch-control/: Cargo.toml  index.html  styles.css
plugs/brisket-launch-control/src/: main.rs
plugs/canon-devotional-builder/: Cargo.toml  index.html  styles.css
plugs/canon-devotional-builder/src/: main.rs
plugs/cargo-build-in-the-carpool-lane/: Cargo.toml  index.html  styles.css
plugs/cargo-build-in-the-carpool-lane/src/: main.rs
plugs/carpool-content-pack/: Cargo.toml  index.html  styles.css
plugs/carpool-content-pack/src/: main.rs
plugs/daily-suno-prompt/: Cargo.toml  index.html  styles.css
plugs/daily-suno-prompt/src/: main.rs
plugs/deep-space-flight-console/: Cargo.toml  index.html  styles.css
plugs/deep-space-flight-console/src/: main.rs
plugs/devtools-swiss-army-knife/: Cargo.toml  index.html  styles.css
plugs/devtools-swiss-army-knife/src/: main.rs
plugs/fly-the-orion-mobile/: Cargo.toml  index.html  styles.css
plugs/fly-the-orion-mobile/src/: main.rs
plugs/friday-13th-countdown/: Cargo.toml  index.html  styles.css
plugs/friday-13th-countdown/src/: main.rs
plugs/go-no-go/: Cargo.toml  index.html  styles.css
plugs/go-no-go/src/: main.rs
plugs/hello-plug/: Cargo.toml  index.html
plugs/hello-plug/src/: main.rs
plugs/hello-rust/: Cargo.toml  index.html  styles.css
plugs/hello-rust/src/: main.rs
plugs/hot-mic-detector/: Cargo.toml  index.html  styles.css
plugs/hot-mic-detector/src/: main.rs
plugs/how-many-earths/: Cargo.toml  index.html  styles.css
plugs/how-many-earths/src/: main.rs
plugs/loglens/: Cargo.toml  index.html  styles.css
plugs/loglens/src/: main.rs
plugs/mikegyver-studio-spotify-inventory/: Cargo.toml  index.html
plugs/mikegyver-studio-spotify-inventory/src/: main.rs
plugs/mission-control-can-you-get-home/: Cargo.toml  index.html  styles.css
plugs/mission-control-can-you-get-home/src/: main.rs
plugs/mission-countdown-clock/: Cargo.toml  index.html  styles.css
plugs/mission-countdown-clock/src/: main.rs
plugs/my-new-plug/: Cargo.toml  index.html  styles.css
plugs/my-new-plug/src/: main.rs
plugs/national-days-app/: Cargo.toml  index.html  styles.css
plugs/national-days-app/src/: main.rs
plugs/orbit-the-pie/: Cargo.toml  index.html  styles.css
plugs/orbit-the-pie/src/: main.rs
plugs/patch-forge/: Cargo.toml  index.html  styles.css
plugs/patch-forge/src/: main.rs
plugs/pi-art-generator/: Cargo.toml  index.html  styles.css
plugs/pi-art-generator/src/: main.rs
plugs/pi-memory-challenge/: Cargo.toml  index.html  styles.css
plugs/pi-memory-challenge/src/: main.rs
plugs/pi-music-generator/: Cargo.toml  index.html  styles.css
plugs/pi-music-generator/src/: main.rs
plugs/plug-creator/: Cargo.toml  index.html  styles.css
plugs/plug-creator/src/: main.rs
plugs/punchline-linter/: Cargo.toml  index.html  styles.css
plugs/punchline-linter/src/: main.rs
plugs/rust-again-in-20-minutes/: Cargo.toml  index.html
plugs/rust-again-in-20-minutes-app/: Cargo.toml  index.html  styles.css
plugs/rust-again-in-20-minutes-app/src/: main.rs
plugs/rust-again-in-20-minutes/src/: main.rs
plugs/rust-hello-world-mikegyver-studio/: Cargo.toml  index.html  styles.css
plugs/rust-hello-world-mikegyver-studio/src/: main.rs
plugs/rust-iphone-compiler/: Cargo.toml  index.html  styles.css
plugs/rust-iphone-compiler-demo/: Cargo.toml  index.html  styles.css
plugs/rust-iphone-compiler-demo/src/: main.rs
plugs/rust-iphone-compiler/src/: main.rs
plugs/seasons-countdown/: Cargo.toml
plugs/seasons-coutdown/: index.html  styles.css
plugs/seasons-coutdown/src/: main.rs
plugs/signal-house-lab/: Cargo.toml  index.html  styles.css
plugs/signal-house-lab/src/: main.rs
plugs/spotify-embed-link-converter/: Cargo.toml  index.html  styles.css
plugs/spotify-embed-link-converter/src/: main.rs
plugs/spotify-preview-clip-generator/: Cargo.toml  index.html  styles.css
plugs/spotify-preview-clip-generator/src/: main.rs
plugs/steady-sip/: Cargo.toml  index.html  styles.css
plugs/steady-sip/src/: main.rs
plugs/telemetry-tap/: Cargo.toml  index.html  styles.css
plugs/telemetry-tap/src/: main.rs
plugs/this-is-cool/: Cargo.toml  index.html
plugs/this-is-cool/src/: main.rs
plugs/x-59-quiet-supersonic-mission/: Cargo.toml  index.html  styles.css
plugs/x-59-quiet-supersonic-mission/src/: main.rs
tools/: new-plug.ps1
