[package]
name = "artemis_ride_along"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Navigator",
  "Clipboard",
  "HtmlAudioElement",
  "Storage",
] }