[package]
name = "daily_suno_prompt"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"     # ✅ FIX E0433
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo = "0.11"
js-sys = "0.3"

web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "Navigator",
  "Clipboard",
  "Storage",
  "HtmlTextAreaElement",
  "console"
] }
