[package]
name = "apollo-orion-console-v3"
version = "0.3.0"
edition = "2021"

[dependencies]
gloo = { version = "0.11", features = ["timers", "events"] }
js-sys = "0.3"
yew = { version = "0.21", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "HtmlAudioElement",
]