[package]
name = "hot_mic_detector"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "EventTarget",
  "HtmlElement",
  "HtmlTextAreaElement",
  "Navigator",
  "Clipboard",
] }