# Cargo.toml
[package]
name = "loglens"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
gloo = "0.11"
web-sys = { version = "0.3", features = ["Window", "Document", "Navigator", "Clipboard"] }
wasm-bindgen-futures = "0.4"