[package]
name = "spotify_inventory"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo = "0.11"
gloo-storage = "0.3"
gloo-file = "0.3"
web-sys = { version = "0.3", features = [
  "Blob",
  "BlobPropertyBag",
  "Document",
  "Element",
  "HtmlAnchorElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Node",
  "Url",
  "Window"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"