[package]
name = "mission-control-carpool"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
web-sys = { version = "0.3", features = [
  "HtmlAudioElement",
  "Window",
  "Document"
] }
js-sys = "0.3"
wasm-bindgen = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true