# Cargo.toml
[package]
name = "mission-countdown-clock"
version = "0.1.0"
edition = "2021"

# Make the target explicit so Cargo metadata can't complain
[[bin]]
name = "mission-countdown-clock"
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

gloo-timers = "0.3"
gloo-net = "0.5"

js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlSelectElement",
  "Navigator",
  "Clipboard",
  "Storage"
] }