[package]
name = "national_days_app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

gloo-net = "0.6"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Navigator",
  "Clipboard",
  "HtmlInputElement"
] }