[package]
name = "patchforge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo = "0.11"

web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlAnchorElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "HtmlImageElement",
  "Url",
  "Blob",
  "BlobPropertyBag",
  "console",
] }
js-sys = "0.3"