[package]
name = "patchforge"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
gloo = "0.11"
js-sys = "0.3"

web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlAnchorElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "HtmlImageElement",
  "HtmlSelectElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Url",
  "Blob",
  "BlobPropertyBag",
  "console",
] }