[package]
name = "pi-art-generator"
version = "0.2.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
wasm-bindgen = "0.2"
js-sys = "0.3"

web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "HtmlAnchorElement",
  "HtmlInputElement"
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true