[package]
name = "pi-memory-challenge"
version = "0.3.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
web-sys = { version = "0.3", features = ["Window", "Storage", "HtmlInputElement"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true