[package]
name = "pi-music-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "AudioContext",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "GainNode",
  "HtmlInputElement",
  "OscillatorNode",
  "OscillatorType"
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true