[package]
name = "punchline_linter"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

gloo-storage = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "Navigator",
  "Clipboard",
  "Storage",
  "HtmlTextAreaElement",
  "HtmlInputElement"
] }