[package]
name = "punchline_linter"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
regex = "1"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3", features = [
  "Window",
  "Navigator",
  "Clipboard",
  "HtmlTextAreaElement"
] }