[package]
name = "spotify-embed-link-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Window",
    "Navigator",
    "Clipboard"
] }
wasm-bindgen = "0.2"