[package]
name = "spotify-preview-clip-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = [
  "HtmlTextAreaElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "Window",
  "Navigator",
  "Clipboard",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "Document",
  "HtmlAnchorElement"
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"