[package]
name = "telemetry-tap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "telemetry-tap"
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlTextAreaElement",
  "HtmlInputElement",
  "Navigator",
  "Clipboard",
  "Storage"
] }
js-sys = "0.3"